tests/ui/no-link-unknown-crate.stderr
error[E0463]: can't find crate for `doesnt_exist`
  --> $DIR/no-link-unknown-crate.rs:2:1
   |
LL | extern crate doesnt_exist;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ can't find crate

error: aborting due to previous error

For more information about this error, try `rustc --explain E0463`.
